--- a/posts/static/css/main.css
+++ b/posts/static/css/main.css
@@ -245,13 +245,13 @@ ul.nav li.open .icon-white {
   color: #333333;
   margin-right: 2px;
   position: relative;
-  bottom: -3px;
+  bottom: -2px;
 }
 .post .goodposttext .icon-ok, .post .goodposttext .icon-question-sign {
   font-size: 11px;
   position: absolute;
   left: 4px;
-  top: 6px;
+  top: 7px;
   z-index: 2;
   color: #333333;
 }
@@ -382,6 +382,7 @@ h5 i {
   -webkit-transition: height 0.2s; 
   -moz-transition: height 0.2s;
   /*word-wrap: break-word;*/
+  display: none !important;
 }
 .newpost .tagsinput {
   background-color: #F7F7F7;
@@ -397,7 +398,7 @@ h5 i {
   color: #999999;
   background-color: #FFFFFF;
 }
-.newpost .info {
+.newpost .info, .newreply .info {
   position: absolute;
   bottom: 3px;
   right: 60px;
@@ -418,4 +419,37 @@ h5 i {
 }
 .taglink  a, .taglink label{
   color: #FFFFFF !important;
+}
+.textareadiv {
+  transition: height 0.2s;
+  -webkit-transition: height 0.2s; 
+  -moz-transition: height 0.2s;
+  background: #F7F7F7;
+  border-radius: 4px 4px 4px 4px;
+  border: #CCCCCC 1px solid;
+  color: #555555;
+  min-height: 20px;
+  line-height: 20px;
+  margin-bottom: 10px;
+  padding: 4px 6px;
+  vertical-align: middle;
+  white-space: pre-wrap;
+}
+.textareadiv.reply {
+  margin-top: 5px;
+}
+.newreply .textareadiv {
+  margin-bottom: 32px;
+}
+.newreply .btn-send {
+  right: 2px;
+}
+.textareadiv:focus {
+  border: #AAAAAA 1px solid;
+  background: #FFFFFF;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(82, 168, 236, 0.6);
+}
+.textareadiv.edit {
+  margin-top: 5px;
+  background: #EDEDED;
 }
